# nnnBLAST

./: .gitignore  ABOUT.md  Cargo.toml  README.md  TODO.md
.claude/: CLAUDE.md  launch.json  settings.local.json
.github/workflows/: deploy.yml
crates/nnnblast-core/: Cargo.toml
crates/nnnblast-core/src/: align.rs  index.rs  lib.rs  ncbi.rs  query.rs  search.rs  stats.rs  types.rs
crates/nnnblast-core/tests/: ncbi_integration.rs
crates/nnnblast-server/: Cargo.toml
crates/nnnblast-server/src/: api.rs  main.rs
crates/nnnblast-wasm/: Cargo.toml
crates/nnnblast-wasm/src/: lib.rs
data/: example.fasta
proxy/: wrangler.toml
proxy/src/: index.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  api.ts  index.css  search.ts  types.ts  worker.ts
web/src/components/: AlignmentView.tsx  HelpPanel.tsx  QueryVisual.tsx  ResultsTable.tsx
web/src/pages/: About.tsx
