[package]
name = "nnnblast-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bio = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time", "sync"] }
quick-xml = "0.37"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
