[package]
name = "nnnblast-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["dep:reqwest", "dep:tokio", "dep:rayon", "dep:bio", "dep:futures", "dep:tracing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quick-xml = "0.37"

# Server-only dependencies (not compiled for WASM)
bio = { version = "2", optional = true }
rayon = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["time", "sync"], optional = true }
tracing = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
